# yesod-slides

./: LICENSE  README  README.markdown  yesod-slides.cabal
main/: yesod-slides.hs
src/: Slides.hs  devel-server.hs  production.hs  test.hs
