name:              yesod-slides
version:           0.1.0
license:           BSD3
license-file:      LICENSE
author:            Hamish Mackenzie
maintainer:        Hamish Mackenzie
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://yesod-slides.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    build-depends: base         >= 4       && < 5
                 , yesod-core   >= 0.8     && < 0.9
                 , yesod-static
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , template-haskell
                 , hamlet
                 , blaze-html
                 , web-routes
                 , transformers
                 , wai
                 , blaze-builder
                 , filepath
    exposed-modules: Slides
    hs-source-dirs: src

executable         yesod-slides
    build-depends: base         >= 4       && < 5
                 , yesod-slides == 0.1.0
                 , warp
                 , wai-extra
                 , ghcjs-rts
    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       yesod-slides.hs
    hs-source-dirs: main

    ghc-options:   -Wall -threaded
